@@ -80,6 +80,7 @@ struct http_io_conf {
     int                     debug;
     int                     debug_http;
     int                     http_11;                    // restrict to HTTP 1.1
+    int                     ip_tos;                     // ip TOS byte, or -1 for none
     int                     quiet;
     int                     no_curl_cache;              // don't cache cURL handles
     const struct comp_alg   *compress_alg;              // compression algorithm, or NULL for none
