@@ -1,3 +1,7 @@
+Version Next
+
+    - Add "--ipTOS" flag (#251)
+
 Version 2.1.6 released August 22, 2025
 
     - Fix realloc() crash with newer libfuse when "--filename" is used.
